# agent-observer

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_observer/: __init__.py  observable.py  observable_dict.py  observer_group.py  reactive_property.py
tests/: test_observable.py  test_observable_dict.py  test_observer_group.py  test_reactive_property.py
